@@ -16,6 +16,8 @@
     - AST_user_group_hourly_detail.php: Added link to v2 of report.
     - AST_webserver_url_report.php: Added HTML format.
     - admin.php: Added allow_manage_active_lists system setting.
+  * Add upstream Rev. 2807:
+    - admin.php: Fix for issue #1036.
 
 2.25.6
 
